--- a/roles/prometheus/templates/prometheus.yml.j2
+++ b/roles/prometheus/templates/prometheus.yml.j2
@@ -30,4 +30,5 @@ scrape_configs:
   - job_name: 'node_exporter_clients'
     scrape_interval: 5s
     static_configs:
+      - targets: ["192.168.1.100:9100"]
       - targets: ["192.168.1.101:9100"]
